src/objects/Account_Receivables_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer No.</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Receivables Reports</relationshipLabel>
        <relationshipName>Account_Receivables_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baseline_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Baseline Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Area Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doc. Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Due Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No. of Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profit Center Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_In_Document_Cu__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total In Document Cu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Receivables Report</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Account Receivables Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Receivables Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>